--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-markdown": "^9.0.1",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
