--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-markdown": "^9.0.1",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-react": "^8.0.0",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-parse": "^11.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
