--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "buffer": "^6.0.3",
     "gray-matter": "^4.0.3",
+    "gray-matter-browser": "^4.0.4",
     "marked": "^11.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
