--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-react": "^8.0.0",
     "remark-frontmatter": "^5.0.0",
