--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "buffer": "^6.0.3",
     "gray-matter": "^4.0.3",
     "gray-matter-browser": "^4.0.4",
+    "highlight.js": "^11.9.0",
     "marked": "^11.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
