--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "buffer": "^6.0.3",
     "gray-matter": "^4.0.3",
     "gray-matter-browser": "^4.0.4",
+    "highlight.js": "^11.9.0",
     "marked": "^11.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-react": "^8.0.0",
     "remark-frontmatter": "^5.0.0",
