--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "bono-blog",
+  "name": "na-log",
+  "homepage": "https://nerd-animals.github.io/na-log/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
