--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "na-log",
-  "homepage": "https://nerd-animals.github.io/na-log/",
+  "homepage": "https://nerd-animals.github.io/na-log-react-backup/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
