Revert "📝React ver. back-up을 위해 url 수정 (#96)"
This reverts commit 54ddf428e6e397f730b2ad933c9799f01e3ab4f2.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "na-log",
-  "homepage": "https://nerd-animals.github.io/na-log-react-backup/",
+  "homepage": "https://nerd-animals.github.io/na-log/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
